# address_translation

./: Cargo.toml  LICENSE  README.md  developer_doc.txt  test_output.txt  user_doc.txt
src/: calculations.rs  files.rs  lib_fns.rs  main.rs  main1.rs  post.rs  routes.rs  setup.rs  steps.rs
static/: index.css  index.html  index1.html  result.html  segment.html  solution.html  stack_format.html  va_to_pa_format.html
static/images/: readme.txt
templates/: index.hbs  result.hbs  solution.hbs  solution_parent.hbs  steps.hbs
