# Copyright © 2019 Jeff Austin, Kamakshi Nagar
# [This program is licensed under the "MIT License"]
# Please see the file LICENSE in the source
# distribution of this software for license terms.

[package]
name = "address_translation"
version = "0.1.0"
authors = ["Jeff Austin <jja6@pdx.edu>, Kamakshi Nagar <kamakshi@pdx.edu>"]
edition = "2018"

[[bin]]
name = "web_app"
path = "src/bin/web_app/web_app.rs"

[[bin]]
name = "cli"
path = "src/bin/cli/cli.rs"

[dependencies]
rand = "0.7.0"
lazy_static = "1.2.0"
rocket = "0.4.2"
serde = "1.0"
serde_derive = "1.0"

[dependencies.rocket_contrib]
version = "0.4.1"
default-features = false
features = ["handlebars_templates"]
